--- a/Bipeople/Bipeople/Base.lproj/Main.storyboard
+++ b/Bipeople/Bipeople/Base.lproj/Main.storyboard
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Ba4-L6-FOU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13178.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Ba4-L6-FOU">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13156.2"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,8 +18,6 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="omZ-yT-QER" kind="relationship" relationship="viewControllers" id="dVK-Ah-cP6"/>
-                        <segue destination="grC-yX-uHl" kind="relationship" relationship="viewControllers" id="HLa-OR-zES"/>
                         <segue destination="1DY-eY-LF3" kind="relationship" relationship="viewControllers" id="CKE-AD-M39"/>
                         <segue destination="58W-Qk-pPl" kind="relationship" relationship="viewControllers" id="70a-Bk-6pE"/>
                         <segue destination="WeZ-ds-w2r" kind="relationship" relationship="viewControllers" id="5om-bj-8aO"/>
@@ -30,26 +27,6 @@
             </objects>
             <point key="canvasLocation" x="181" y="-80"/>
         </scene>
-        <!--Social-->
-        <scene sceneID="Awb-ub-luZ">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Social" id="omZ-yT-QER" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="Vya-tF-X5V"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vt4-is-aLw" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1127" y="-356"/>
-        </scene>
-        <!--Places-->
-        <scene sceneID="ybk-dc-b1R">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Places" id="grC-yX-uHl" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="aWj-Wt-cSE"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Kcs-4I-1yj" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1136" y="-231"/>
-        </scene>
         <!--Navigation-->
         <scene sceneID="6Xv-mR-PM8">
             <objects>
@@ -58,7 +35,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CRc-Ya-nT0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1156" y="-81"/>
+            <point key="canvasLocation" x="982" y="-265"/>
         </scene>
         <!--History-->
         <scene sceneID="Td8-2o-Nm9">
@@ -68,7 +45,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UaN-CG-rEL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1132" y="46"/>
+            <point key="canvasLocation" x="966" y="-81"/>
         </scene>
         <!--Settings-->
         <scene sceneID="58P-n7-Pcv">
@@ -78,7 +55,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6UA-Ke-bqv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1137" y="207"/>
+            <point key="canvasLocation" x="982" y="103"/>
         </scene>
     </scenes>
 </document>
