그래프 뷰컨트롤러 탭으로 빼버

--- a/Bipeople/Bipeople/Base.lproj/Main.storyboard
+++ b/Bipeople/Bipeople/Base.lproj/Main.storyboard
@@ -20,6 +20,7 @@
                     <connections>
                         <segue destination="1DY-eY-LF3" kind="relationship" relationship="viewControllers" id="CKE-AD-M39"/>
                         <segue destination="58W-Qk-pPl" kind="relationship" relationship="viewControllers" id="70a-Bk-6pE"/>
+                        <segue destination="UF8-Di-Dfy" kind="relationship" relationship="viewControllers" id="Ubf-12-S56"/>
                         <segue destination="WeZ-ds-w2r" kind="relationship" relationship="viewControllers" id="5om-bj-8aO"/>
                     </connections>
                 </tabBarController>
@@ -45,7 +46,17 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UaN-CG-rEL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="966" y="-81"/>
+            <point key="canvasLocation" x="966" y="-144"/>
+        </scene>
+        <!--Graph-->
+        <scene sceneID="Ue2-de-H39">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Graph" id="UF8-Di-Dfy" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="mXy-xv-KY0"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yba-v2-79M" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="959" y="-10"/>
         </scene>
         <!--Settings-->
         <scene sceneID="58P-n7-Pcv">
